--- a/src/main/webapp/css/device-list.css
+++ b/src/main/webapp/css/device-list.css
@@ -44,13 +44,15 @@
   padding-top: 2px;
   border-top: 1px solid gray;
   font-size: 11px;
+  line-height: 1.2em;
 }
 
 .device-list-item-status {
   margin: 0px;
   margin-top: 3px;
   height: 15px;
-  width: 80px;
+  width: 90px;
+  line-height: 1.2em;
   margin-left: auto;
   margin-right: auto;
   color: white;
